css/main.css
.landingsPage {
    background-image: url(https://wallpapercave.com/wp/wp2757874.gif);
    background-size: cover;
    height: 100vh;
    padding: 0;
    margin: 0;
}

.landingsPageText {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: fit-content;
    height: fit-content;
    text-align: center;
    border: solid;
    border-width: 1px;
    border-radius: 50px;
    padding: 30px;
    background-color: rgba(0, 0, 0, 0.3);
}

.landingsPage h1 {
    color: white;
    font-family: Monsterrat;
    font-weight: bolder;
    padding-bottom: 10px;
}

.landingsPageButton {
    background: none;
    text-align: center;
    border-color: white;
    color: white;
}

.landingsPageButton:hover {
    background-color: rgba(241, 54, 55, 0.7);
    text-align: center;
    border-color: white;
    color: white;
}

.navbarCustom {
    border: solid;
    border-left: 0px;
    border-right: 0px;
    border-top: 0px;
    border-color: rgb(241, 54, 55);
    background-color: rgb(24, 24, 32);
}

.navItem {
    padding-left: 10px;
    padding-right: 10px;
}

.navbarButton {
    margin-left: 10px;
}

.column {
    padding: 30px;
    text-align: center;
}

.column h2 {
    padding-top: 10px;
    padding-bottom: 5px;
    color: rgb(241, 54, 55);
}

.column-left {
    padding: 30px;
    text-align: right;
}

.column-right {
    padding: 30px;
    text-align: left;
}

.column-right h2 {
    padding-top: 10px;
    padding-bottom: 5px;
    color: rgb(241, 54, 55);
}

.projectColumn {
    background-image: url(https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg);
    background-size: cover;
    padding: 0;
    display: flex;
    align-items: center;
    background-position: center;
}

.projectColumn:after {
    content: "";
    display: block;
    padding-bottom: 100%;
  }

.projectText {
    width: 90%;
    height: 90%;
    margin-left: 5%;
    text-align: center;
    display: flex;
    flex-direction: column;
    background-color: rgba(24, 24, 32, 0.7);
    transition: width 1s, height 1s, margin 1s, background-color 1s;
    text-decoration: none;
    overflow: hidden;
    padding: 5px;
}

.projectText:hover {
    background-color: rgba(24, 24, 32, 1);
    width: 100%;
    height: 100%;
    margin: 0;
}

.projectText:hover p1 {
    margin-left: 5%;
    margin-right: 5%;
}

.projectText p1 {
    color: white;
    font-family: Monsterrat;
    font-weight: bolder;
    font-size: larger;  
    width:initial;
    transition: margin 1s;
}

.projectText h1 {
    color: white;
    font-family: Monsterrat;
    text-decoration: underline;
}

#about {
    padding-top: 50px;
    margin-top: -50px;
}

#skills {
    padding-top: 50px;
    margin-top: -50px;
}

#projects {
    padding-top: 50px;
    margin-top: -50px;
}

.footer {
    margin-top: 50px;
}

@font-face {
    font-family: Azonix;
    src: url(../Azonix.otf);
    font-display: swap;
}

@font-face {
    font-family: Montserrat;
    src: url(../Montserrat-Regular.ttf);
    font-display: swap;
}

@-webkit-keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(0deg);  /* IE 9 */
        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}
@keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(0deg);  /* IE 9 */
        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}

/* html {
    min-height: 100vh;
} */

/* body{
    padding: 0;
    margin: 0;
    background-image: url(../background.png);
    background-size:cover;
    background-position: center;
}
header {
    padding: 0;
    margin: 0;
    border-style:ridge;
    border-color: white;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    background-color: black;
}

.navbar {
    min-height: 60px;
    max-height: 5%;
    width: 80%;
    display: flex;
    flex-flow: row;
    margin-left: 10%;
}

.navButton {
    width: 20%;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
}

.navButton:hover{
    background-color: white;
}

.navButton:hover a{
    color: black;
}

.navButton a {
    color: white;
    font-family: Azonix;
    height: 100%;
    width: 100%;
    text-decoration: none;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.content {
    display: flex;
    flex-direction: row;
    min-height: 100%;
    width: 100%;
}

footer {
    border-style:ridge;
    border-color: white;
    border-left: 0;
    border-right: 0;
    border-bottom: 0;
    background-color: black;
    bottom: 0;
}

.footerContent {
    min-height: 60px;
    max-height: 5%;
    width: 100%;
    text-decoration: none;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.footerContent p1 {
    color: white;
    margin-left: 10px;
}

#loader-wrapper{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1000;
    background-color: black;
}

#loader-wrapper p {
    position: relative;
    width: 200px;
    height: 50px;
    top: calc(50% - 75px);
    left: 50%;
    margin: 0 0 0 -100px;
    padding: 0;
    text-align: center;
    color: white;
    font-family: Azonix;

    z-index: 1001;
}

#loader {
    display: block;
    position: relative;
    left: 50%;
    top: 50%;
    width: 150px;
    height: 150px;
    margin: -75px 0 0 -75px;
    border-radius: 50%;
    border: 3px solid transparent;
    border-top-color: #3458db;

    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;

    z-index: 1001;
}

#loader::before{
    content: "";
    position: absolute;
    top: 5px;
    left: 5px;
    right: 5px;
    bottom: 5px;
    border-radius: 50%;
    border: 3px solid transparent; 
    border-top-color: #e743c3;

    -webkit-animation: spin 3s linear infinite;
    animation: spin 3s linear infinite;
}

#loader::after{
    content: "";
    position: absolute;
    top: 15px;
    left: 15px;
    right: 15px;
    bottom: 15px;
    border-radius: 50%;
    border: 3px solid transparent;
    border-top-color: #f9c922;

    -webkit-animation: spin 1.5s linear infinite;
    animation: spin 1.5s linear infinite;
}

#loader-wrapper .loader-section {
    position: fixed;
    top: 0;
    width: 51%;
    height: 100%;
    background-color: black;
    z-index: 1000;
}

#loader-wrapper .loader-section.section-left {
    left: 0;
}

#loader-wrapper .loader-section.section-right {
   right: 0; 
} */

.loaded #loader-wrapper .loader-section.section-left {
    -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: translateX(-100%);  /* IE 9 */
            transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
}

.loaded #loader-wrapper .loader-section.section-right {
    -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: translateX(100%);  /* IE 9 */
            transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
}

.loaded #loader {
    opacity: 0;
    -webkit-transition: all 0.3s ease-out;
            transition: all 0.3s ease-out;
}

.loaded #loader-wrapper {
    -webkit-transform: translateY(-100%);
            -ms-transform: translateY(-100%);
                transform: translateY(-100%);
 
        -webkit-transition: all 0.3s 1s ease-out;
                transition: all 0.3s 1s ease-out;
}

.loaded #loader-wrapper .loader-section.section-right,
.loaded #loader-wrapper .loader-section.section-left {
 
    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}

.no-js #loader-wrapper {
    display: none;
}
.no-js h1 {
    color: #222222;
}

@media (max-width: 768px) {
    .column-right {
        text-align: center;
    }

    .column-left {
        padding-top: 30px;
    }
}

